--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <model-viewer src="TLJ LOCK.glb" alt="A 3D model" auto-rotate camera-controls></model-viewer>
+    <model-viewer src="TLJ_LOCK.glb" alt="A 3D model" auto-rotate camera-controls></model-viewer>
   </body>
 </html>
